# AI-URL-Summarizer

./: README.md  main.py  pyproject.toml  requirements.txt
